--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -1,3 +1,6 @@
 {
-  "extends": "../../packages/config/tsconfig/node.json"
+  "extends": "../../packages/config/tsconfig/node.json",
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"],
+  "references": [{ "path": "../../packages/db" }]
 }
