--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,3 +1,9 @@
 {
-  "extends": "../../packages/config/tsconfig/nextjs.json"
+  "extends": "../../packages/config/tsconfig/nextjs.json",
+  "include": ["app", "pages", "src", "next-env.d.ts"],
+  "exclude": ["node_modules", ".next", "dist"],
+  "references": [
+    { "path": "../../packages/ui" },
+    { "path": "../../packages/db" }
+  ]
 }
